<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:scrollbars="vertical">

		<TextView
			android:id="@+id/cart_summary"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="40dp"
			android:gravity="center"
			android:text="@string/cart_info"
			android:textColor="#FF9800"
			android:textSize="20sp" />

		<ListView
			android:id="@+id/pizza_list"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:layout_gravity="center" />

		<TextView
			android:id="@+id/payment_option"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="40dp"
			android:gravity="center"
			android:text="@string/payment_hint"
			android:textColor="#FF9800"
			android:textSize="20sp" />

		<RadioGroup
			android:id="@+id/payment_group"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:orientation="horizontal">

			<RadioButton
				android:id="@+id/cash"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:gravity="center"
				android:text="@string/cash" />

			<RadioButton
				android:id="@+id/credit_card"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/credit_card" />

			<RadioButton
				android:id="@+id/debit_card"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/debit_card" />

		</RadioGroup>

		<androidx.gridlayout.widget.GridLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/card_number"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/card_number"
				android:ems="16"
				android:gravity="center"
				android:hint="@string/card_number"
				android:inputType="number"
				android:maxLength="16"
				android:singleLine="true"
				android:visibility="invisible"
				app:layout_columnSpan="3"
				app:layout_gravity="fill" />

			<EditText
				android:id="@+id/month"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/month"
				android:ems="6"
				android:gravity="center"
				android:hint="@string/month"
				android:inputType="number"
				android:maxLength="2"
				android:visibility="invisible"
				app:layout_column="0"
				app:layout_gravity="center"
				app:layout_row="1" />

			<EditText
				android:id="@+id/year"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/year"
				android:ems="6"
				android:gravity="center"
				android:hint="@string/year"
				android:inputType="number"
				android:maxLength="2"
				android:visibility="invisible"
				app:layout_column="1"
				app:layout_gravity="center"
				app:layout_row="1" />

			<EditText
				android:id="@+id/cvc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/cvc"
				android:ems="6"
				android:gravity="center"
				android:hint="@string/cvc"
				android:inputType="number"
				android:maxLength="3"
				android:visibility="invisible"
				app:layout_column="2"
				app:layout_gravity="center"
				app:layout_row="1" />

		</androidx.gridlayout.widget.GridLayout>

		<TextView
			android:id="@+id/delivery_hint"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="40dp"
			android:gravity="center"
			android:text="@string/delivery_info"
			android:textColor="#FF9800"
			android:textSize="20sp" />

		<androidx.gridlayout.widget.GridLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/name"
				android:ems="10"
				android:gravity="center"
				android:hint="@string/name"
				android:inputType="text"
				android:singleLine="true"
				app:layout_column="0"
				app:layout_columnSpan="2"
				app:layout_gravity="fill"
				app:layout_row="0" />

			<EditText
				android:id="@+id/phone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/phone"
				android:ems="10"
				android:gravity="center"
				android:hint="@string/phone"
				android:inputType="phone"
				android:singleLine="true"
				app:layout_column="0"
				app:layout_columnSpan="2"
				app:layout_gravity="fill"
				app:layout_row="1" />

			<EditText
				android:id="@+id/email"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/email_address"
				android:ems="10"
				android:gravity="center"
				android:hint="@string/email_address"
				android:inputType="textEmailAddress"
				android:singleLine="true"
				app:layout_column="0"
				app:layout_columnSpan="2"
				app:layout_gravity="fill"
				app:layout_row="2" />

			<EditText
				android:id="@+id/street"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/street"
				android:ems="10"
				android:gravity="center"
				android:hint="@string/street"
				android:inputType="text"
				app:layout_column="0"
				app:layout_columnSpan="2"
				app:layout_gravity="fill"
				app:layout_row="3" />

			<AutoCompleteTextView
				android:id="@+id/city"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:gravity="center"
				android:hint="@string/city"
				android:singleLine="true"
				app:layout_column="0"
				app:layout_gravity="center"
				app:layout_row="4" />

			<EditText
				android:id="@+id/zip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/zip"
				android:ems="8"
				android:gravity="center"
				android:hint="@string/zip"
				android:inputType="textPostalAddress"
				android:singleLine="true"
				app:layout_column="1"
				app:layout_gravity="center"
				app:layout_row="4" />

			<EditText
				android:id="@+id/note"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autofillHints="@string/note"
				android:ems="10"
				android:gravity="center"
				android:hint="@string/note"
				android:inputType="text"
				app:layout_column="0"
				app:layout_columnSpan="2"
				app:layout_gravity="fill"
				app:layout_row="5" />
		</androidx.gridlayout.widget.GridLayout>

		<Button
			android:id="@+id/pay"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="payment"
			android:text="@string/pay_now"
			android:textAllCaps="false"
			android:textColor="#3F51B5" />

	</LinearLayout>
</ScrollView>