<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:id="@+id/textView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="40dp"
		android:text="@string/choose_type"
		android:textAlignment="center"
		android:textAllCaps="false"
		android:textColor="#FF9800"
		android:textSize="20sp" />

	<TextView
		android:id="@+id/ingredient"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:textAlignment="center"
		android:textAllCaps="false" />

	<ImageView
		android:id="@+id/pizza_image"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:contentDescription="@string/dynamic_rendering" />

	<CheckBox
		android:id="@+id/cart"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="syn_to_cart"
		android:text="@string/add_to_cart"
		android:visibility="invisible" />

	<Button
		android:id="@+id/go_to_cart"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="100dp"
		android:onClick="go_to_cart"
		android:text="@string/my_cart"
		android:textAllCaps="false"
		android:textColor="#3F51B5" />

</LinearLayout>